# construindo-apis-rest-python

./: README.md  commands.md  pyproject.toml
.github/workflows/: main.yml
api_pedidos/: api.py  magalu_api.py
api_produtos/: magalu_api_async.py
tests/: test_api.py
