[tool.poetry]
name = "construindo-apis-rest-python"
version = "0.1.0"
description = ""
authors = ["Wilkne Maia <wilkne@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
httpx = "^0.22.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
httpie = "^3.1.0"
pytest = "^7.1.1"
isort = "^5.10.1"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79
